--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-main = 'tensorbeat_scraper.main:main'
+main = 'tensorbeat_scraper.main:init'
